package app;

public interface Coffee {

    String getName();
    void make();
}
